# OmniSoc

./: .gitignore  CLAUDE.md  LICENSE  README.md
Arduino_UART/: Arduino_UART.ino  OmniSocTesting.ino  PackBytes.h  README.md  SerialManager.cpp  SerialManager.h
CPP_OmniSoc/: CMakeLists.txt  Config.cmake.in  Readme.md  Readme.txt
CPP_OmniSoc/include/: PackBytes.h  Socket_Serial.h  UART_Serial.h
CPP_OmniSoc/src/: BLE_Serial.cpp  CMakeLists.txt  ChatClient.cpp  Socket_Serial.cpp  Socket_Serial.h  UART_Serial.cpp  UART_Serial.h  UART_Serial_Tester.cpp
Python_UART/: omnisoc_serial.py
Unity_Port/SocketSerial/: PACKAGE_STRUCTURE.md  README.md  package.json
Unity_Port/SocketSerial/Runtime/: SocketSerial.Runtime.asmdef  SocketSerial.cs  SocketSerialBehaviour.cs
Unity_Port/SocketSerial/Samples/: SimpleChatDemo.cs  SocketSerialExamples.cs
ros2Soc/: README.md
ros2Soc/src/chat_client_py/: package.xml  setup.cfg  setup.py
ros2Soc/src/chat_client_py/chat_client_py/: chat.py
ros2Soc/src/message_definitions/: CMakeLists.txt  package.xml
ros2Soc/src/message_definitions/msg/: ChatMessage.msg
