<?xml version="1.0"?>
<package format="3">
  <name>message_definitions</name>
  <version>0.0.0</version>
  <description>A package for custom message definitions</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
